--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "nodemon": "^3.1.10"
+    "marked": "^4.3.0",
+    "nodemon": "^3.1.10",
+    "sanitize-html": "^2.17.0"
   }
 }
